# scuttlebutt

./: .travis.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  index.html  rustfmt.toml  search-index.js
implementors/core/convert/: trait.From.js
implementors/core/fmt/: trait.Debug.js
scuttlebutt/: enum.Error.html  index.html  sidebar-items.js  struct.Cluster.html  struct.Event.html  struct.EventSource.html  struct.Object.html  struct.ObjectMeta.html  struct.ObjectReference.html  trait.Events.html  type.Result.html
src/: lib.rs  lib.rs.in  main.rs
src/scuttlebutt/src/: lib.rs.html
