[package]
name = "scuttlebutt"
version = "0.1.1"
authors = ["softprops <d.tangren@gmail.com>"]
description = "A Rust interface for kubernetes events"
documentation = "https://softprops.github.io/scuttlebutt"
homepage = "https://github.com/softprops/scuttlebutt"
repository = "https://github.com/softprops/scuttlebutt"
keywords = ["kubernetes", "k8s", "hyper"]
license = "MIT"
build = "build.rs"

[build-dependencies]
serde_codegen = "0.8"

[dependencies]
log = "0.3"
hyper = "0.9"
serde = "0.8"
serde_json = "0.8"

[[bin]]
doc = false
name = "scuttlebutt"
