[package]
name = "scuttlebutt"
version = "0.2.0"
authors = ["softprops <d.tangren@gmail.com>"]
description = "A Rust interface for kubernetes events"
documentation = "https://softprops.github.io/scuttlebutt"
homepage = "https://github.com/softprops/scuttlebutt"
repository = "https://github.com/softprops/scuttlebutt"
keywords = ["kubernetes", "k8s", "hyper"]
license = "MIT"

[dependencies]
log = "0.3"
hyper = "0.10"
serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"

[[bin]]
doc = false
name = "scuttlebutt"
